--- a/Pykin Realm/Pykin Realm/Pykin Realm-Info.plist
+++ b/Pykin Realm/Pykin Realm/Pykin Realm-Info.plist
@@ -38,5 +38,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>UIAppFonts</key>
+	<array>
+        <string>UGO-COLOR.otf</string>
+	</array>
 </dict>
 </plist>
